// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Currency/CurrencyList render 1`] = `
<Flex
  direction="row"
  wrap="wrap"
  x="flex-start"
  y="flex-start"
>
  <CurrencyList__Column
    key="0"
  >
    <CurrencyList__Item
      key="eur"
    >
      <Tooltip
        inline={false}
        mobile={false}
        position="right"
        tip={
          <CurrencyList__Tip>
            Euro
          </CurrencyList__Tip>
        }
      >
        <CurrencyList__ItemText
          active={true}
          onClick={[Function]}
          theme={
            Object {
              "colors": Object {
                "accent-100": "#F8CA32",
                "accent-200": "#F8CA32",
                "accent-300": "#F8CA32",
                "accent-400": "#F8CA32",
                "accent-500": "#ffcc00",
                "accent-600": "#F8CA32",
                "accent-700": "#F8CA32",
                "accent-800": "#F8CA32",
                "accent-900": "#F8CA32",
                "brand-info": "",
                "danger-100": " #ffc7c7",
                "danger-200": " #ffa8a8",
                "danger-300": " #ff7e7e",
                "danger-400": " #ff5858",
                "danger-500": "#ff2424",
                "danger-600": " #e51f1f",
                "danger-700": "#d21c1c",
                "danger-800": " #b91919",
                "danger-900": "#9e1616",
                "facebook-500": "#4465ad",
                "facebook-600": "#3b5998",
                "facebook-800": "#344d85",
                "google-500": "#ff5542",
                "google-600": "#f34a38",
                "google-800": "#e84735",
                "grey-100": "#edeff2",
                "grey-200": "#d5dee7",
                "grey-400": "#adb9c5",
                "grey-500": "#94a2b0",
                "grey-600": "#7c8b99",
                "grey-700": "#57626c",
                "grey-800": "#2e353b",
                "grey-900": "#171b1e",
                "insurance-plus": "#F5922A",
                "mail-button-500": "#0097A9",
                "mail-footer-500": "#0097A9",
                "mail-header-500": "#0097A9",
                "neutral-100": "#e9eef2",
                "neutral-200": "#d5dee7",
                "neutral-300": "#c6d0dc",
                "neutral-400": "#adb9c5",
                "neutral-500": "#94a2b0",
                "neutral-600": "#7c8b99",
                "neutral-700": "#57626c",
                "neutral-800": "#2e353b",
                "neutral-900": "#171b1e",
                "primary-100": "#b2f3eb",
                "primary-200": "#77ebdd",
                "primary-300": "#4de3d0",
                "primary-400": "#00d7bd",
                "primary-500": "#00ccb4",
                "primary-600": "#01bba5",
                "primary-700": "#00ad98",
                "primary-800": "#009b88",
                "primary-900": "#008676",
                "success-100": "#d3fac5",
                "success-200": "#b2f79c",
                "success-300": "#8fec70",
                "success-400": "#6ee445",
                "success-500": "#52cf26",
                "success-600": "#37c207",
                "success-700": "#2eb300",
                "success-800": "#29a000",
                "success-900": "#248e00",
                "text-primary": "#ffffff",
                "text-secondary": "#2f2f2f",
                "trip-end": "#d50c6a",
                "trip-start": "#0097a9",
                "warning-100": "#fff1cf",
                "warning-200": "#ffe7b2",
                "warning-300": "#ffdb8d",
                "warning-400": "#ffce67",
                "warning-500": "#ffc345",
                "warning-600": "#f0b539",
                "warning-700": "#dda734",
                "warning-800": "#c9972e",
                "warning-900": "#ac8127",
                "white": "#ffffff",
              },
            }
          }
        >
          <Relay(CurrencyItem)
            item={
              Object {
                "code": "eur",
                "name": "Euro",
              }
            }
          />
        </CurrencyList__ItemText>
      </Tooltip>
    </CurrencyList__Item>
  </CurrencyList__Column>
  <CurrencyList__Column
    key="1"
  >
    <CurrencyList__Item
      key="huf"
    >
      <Tooltip
        inline={false}
        mobile={false}
        position="right"
        tip={
          <CurrencyList__Tip>
            Hungarian Forint
          </CurrencyList__Tip>
        }
      >
        <CurrencyList__ItemText
          active={false}
          onClick={[Function]}
          theme={
            Object {
              "colors": Object {
                "accent-100": "#F8CA32",
                "accent-200": "#F8CA32",
                "accent-300": "#F8CA32",
                "accent-400": "#F8CA32",
                "accent-500": "#ffcc00",
                "accent-600": "#F8CA32",
                "accent-700": "#F8CA32",
                "accent-800": "#F8CA32",
                "accent-900": "#F8CA32",
                "brand-info": "",
                "danger-100": " #ffc7c7",
                "danger-200": " #ffa8a8",
                "danger-300": " #ff7e7e",
                "danger-400": " #ff5858",
                "danger-500": "#ff2424",
                "danger-600": " #e51f1f",
                "danger-700": "#d21c1c",
                "danger-800": " #b91919",
                "danger-900": "#9e1616",
                "facebook-500": "#4465ad",
                "facebook-600": "#3b5998",
                "facebook-800": "#344d85",
                "google-500": "#ff5542",
                "google-600": "#f34a38",
                "google-800": "#e84735",
                "grey-100": "#edeff2",
                "grey-200": "#d5dee7",
                "grey-400": "#adb9c5",
                "grey-500": "#94a2b0",
                "grey-600": "#7c8b99",
                "grey-700": "#57626c",
                "grey-800": "#2e353b",
                "grey-900": "#171b1e",
                "insurance-plus": "#F5922A",
                "mail-button-500": "#0097A9",
                "mail-footer-500": "#0097A9",
                "mail-header-500": "#0097A9",
                "neutral-100": "#e9eef2",
                "neutral-200": "#d5dee7",
                "neutral-300": "#c6d0dc",
                "neutral-400": "#adb9c5",
                "neutral-500": "#94a2b0",
                "neutral-600": "#7c8b99",
                "neutral-700": "#57626c",
                "neutral-800": "#2e353b",
                "neutral-900": "#171b1e",
                "primary-100": "#b2f3eb",
                "primary-200": "#77ebdd",
                "primary-300": "#4de3d0",
                "primary-400": "#00d7bd",
                "primary-500": "#00ccb4",
                "primary-600": "#01bba5",
                "primary-700": "#00ad98",
                "primary-800": "#009b88",
                "primary-900": "#008676",
                "success-100": "#d3fac5",
                "success-200": "#b2f79c",
                "success-300": "#8fec70",
                "success-400": "#6ee445",
                "success-500": "#52cf26",
                "success-600": "#37c207",
                "success-700": "#2eb300",
                "success-800": "#29a000",
                "success-900": "#248e00",
                "text-primary": "#ffffff",
                "text-secondary": "#2f2f2f",
                "trip-end": "#d50c6a",
                "trip-start": "#0097a9",
                "warning-100": "#fff1cf",
                "warning-200": "#ffe7b2",
                "warning-300": "#ffdb8d",
                "warning-400": "#ffce67",
                "warning-500": "#ffc345",
                "warning-600": "#f0b539",
                "warning-700": "#dda734",
                "warning-800": "#c9972e",
                "warning-900": "#ac8127",
                "white": "#ffffff",
              },
            }
          }
        >
          <Relay(CurrencyItem)
            item={
              Object {
                "code": "huf",
                "name": "Hungarian Forint",
              }
            }
          />
        </CurrencyList__ItemText>
      </Tooltip>
    </CurrencyList__Item>
  </CurrencyList__Column>
</Flex>
`;

exports[`#Currency/CurrencyList render 2`] = `
.c0 {
  line-height: 30px;
  padding-left: 5px;
  border-radius: 3px;
  cursor: pointer;
  background: #01bba5;
}

.c0:hover {
  background: #01bba5;
}

.c0 .Code-s9apmq5-0 {
  font-weight: bold;
  color: #ffffff;
}

.c0 .Sign-d8mumz-0 {
  margin-left: 10px;
  color: #ffffff;
}

.c0 .Name-s18tzvjn-0 {
  margin-left: 10px;
  color: #ffffff;
}

@media (min-width:769px) {
  .c0 .Name-s18tzvjn-0 {
    display: none;
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <Relay(CurrencyItem)
    item={
      Object {
        "code": "eur",
        "name": "Euro",
      }
    }
  />
</div>
`;

exports[`#Currency/CurrencyList render 3`] = `
.c0 {
  line-height: 30px;
  padding-left: 5px;
  border-radius: 3px;
  cursor: pointer;
  background: transparent;
}

.c0:hover {
  background: #edeff2;
}

.c0 .Code-s9apmq5-0 {
  font-weight: bold;
  color: #171b1e;
}

.c0 .Sign-d8mumz-0 {
  margin-left: 10px;
  color: #57626c;
}

.c0 .Name-s18tzvjn-0 {
  margin-left: 10px;
}

@media (min-width:769px) {
  .c0 .Name-s18tzvjn-0 {
    display: none;
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <Relay(CurrencyItem)
    item={
      Object {
        "code": "huf",
        "name": "Hungarian Forint",
      }
    }
  />
</div>
`;
